--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+body{
+  box-sizing:border-box;
+  padding:0;
+  margin:0;
+  font-family:"Josefin Sans",Sans-serif;
+}
+.wrapper
+{
+  max-width:400px;
+  width:100%;
+  margin:auto;
+  margin-top:150px;
+  padding:20px;
+  background:#fff;
+  box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+}
+.title{
+  font-size:35px;
+  font-weight:700;
+  margin-bottom:35px;
+  color:#483D8B;
+  text-transform:uppercase;
+  text-align:center;
+  
+}
+.control{
+  margin-bottom:15px;
+  display:flex;
+  align-items:center;
+
+}
+input{
+  width:100%;
+  outline:none;
+  border:5px solid #696969;
+  font-size:15px;
+  padding:8px 10px;
+  text-align:center;
+  
+   
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a{
+  color:rgb(49, 226, 49);
+  line-height: 1em;
+    text-decoration: none;
+}
+.end{
+  font-size:18px;
+  font-weight:500;
+  margin-bottom:25px;
+  text-transform:uppercase;
+  text-align: justify; 
+  text-justify: auto;
+  margin-top:40px;
+
+}
+.hot{
+  display:flex;
+  width: 100%;
+}
+.inpu{
+  width:170px;
 }
