--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-
-
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 body{
   box-sizing:border-box;
   padding:0;
@@ -8,7 +8,7 @@ body{
 }
 .wrapper
 {
-  max-width:400px;
+  max-width:500px;
   width:100%;
   margin:auto;
   margin-top:150px;
@@ -17,50 +17,25 @@ body{
   box-shadow:1px 1px 2px rgba(0,0,0,0.125);
 }
 .title{
-  font-size:35px;
+  font-size:40px;
+  font-family: 'Courgette';
   font-weight:700;
-  margin-bottom:35px;
-  color:#483D8B;
-  text-transform:uppercase;
-  text-align:center;
-  
-}
-.control{
-  margin-bottom:15px;
-  display:flex;
-  align-items:center;
-
-}
-input{
-  width:100%;
-  outline:none;
-  border:5px solid #696969;
-  font-size:15px;
-  padding:8px 10px;
-  text-align:center;
-  
-   
-}
-
-a{
-  color:rgb(49, 226, 49);
-  line-height: 1em;
-    text-decoration: none;
-}
-.end{
-  font-size:18px;
-  font-weight:500;
   margin-bottom:25px;
+  color:#191970;
   text-transform:uppercase;
-  text-align: justify; 
-  text-justify: auto;
-  margin-top:40px;
-
+  text-align:center;
+  margin-bottom:40px;
 }
-.hot{
+button{
+  margin-top:20px;
   display:flex;
-  width: 100%;
-}
-.inpu{
-  width:170px;
+  flex-direction:column;
+  padding:20px;
+  background-color:#191970;
+  width:100%;
+  align-items:center;
+  justify-content:center;
+  font-family: 'Courgette';
+  color:#fff;
+  font-size:30px;
 }
