--- a/src/index.css
+++ b/src/index.css
@@ -1,78 +1,235 @@
-{
-  margin:0;
-  padding:0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 body{
-  background-color:#fff;
-  margin-top:40px;
-  overflow:hidden;
-}
-.regform{
-  background-color:#fff;
-  text-align:center;
-  width:700px;
-  margin:auto;
-  border-radius:15px 15px 0px 0px;
-  color:#191970;
-  margin-top:260px;
-  margin-bottom:100px;
-  font-size:80px;
+  box-sizing:border-box;
+  padding:0;
+  margin:0;
+  font-family:"Josefin Sans",Sans-serif;
+  overflow-x:hidden;
+  overflow-y:scroll;
 
+   
 }
-@media only screen and (max-width: 700px){
-  body{
-    background-color:#fff;
-    margin-top:40px;
-    overflow:hidden;
-  }
-  .regform{
-    background-color:#fff;
-    text-align:center;
-    width:500px;
-    margin:auto;
-    border-radius:15px 15px 0px 0px;
-    color:#191970;
-    margin-top:260px;
-    margin-bottom:100px;
-    font-size:50px;
+
+.wrapper
+{
+  background-image:url("https://images.unsplash.com/photo-1582133456304-2f5cb1c2afbb?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFuZCUyMGhvbGRpbmclMjBwaG9uZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+  max-width:500px;
+  width:100%;
+  height:70vh;
+  margin:auto;
+  opacity:0.8;
+  margin-top:0px;
+  padding:20px;
+  box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+}
+.wrap{
+  max-width:500px;
+  width:100%;
+  height:30vh;
+  margin:auto;
+  opacity:1.5;
+  margin-top:0px;
+  padding:20px;
+  box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+}
+
+h1{
+  font-size:30px;
+  color:aqua;
+  opacity:0.5;
+}
+.title{
+  font-size:50px;
+  font-family:'Courgette' ;
+  color:#fff;
+  font-weight:700;
+  margin-bottom:30px;
+  text-transform:uppercase;
+  text-align:center;
+  opacity:1;
   
-  }
+  
+}
+
+a{
+  color:green;
+  text-decoration:none;
+}
+.sing{
+  margin-top:0px;
+     margin-bottom:0px;
+     font-size:20px;
+     margin-left:40px;
+}
+button{
+  margin-top:10px;
+  display:flex;
+  margin-left:18px;
+  flex-direction:column;
+  padding:5px;
+  background-color:#191970;
+  width:90%;
+  align-items:center;
+  justify-content:center;
+  font-family: 'Courgette';
+  color:#fff;
+  font-size:20px;
 }
 @media only screen and (max-width: 500px){
   body{
-    background-color:#fff;
-    margin-top:40px;
-    overflow:hidden;
-  }
-  .regform{
-    background-color:#fff;
-    text-align:center;
-    width:300px;
-    margin:auto;
-    border-radius:15px 15px 0px 0px;
-    color:#191970;
-    margin-top:260px;
-    margin-bottom:100px;
-    font-size:40px;
+    box-sizing:border-box;
+    padding:0;
+    margin:0;
+    font-family:"Josefin Sans",Sans-serif;
+    overflow-x:hidden;
+    overflow-y:scroll;
   
+     
+  }
+  
+  .wrapper
+  {
+    background-image:url("https://images.unsplash.com/photo-1582133456304-2f5cb1c2afbb?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFuZCUyMGhvbGRpbmclMjBwaG9uZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+    max-width:300px;
+    width:100%;
+    height:70vh;
+    margin:auto;
+    opacity:0.8;
+    margin-top:0px;
+    padding:20px;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+  }
+  .wrap{
+    max-width:300px;
+    width:100%;
+    height:30vh;
+    margin:auto;
+    opacity:1.5;
+    margin-top:0px;
+    padding:20px;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+  }
+  
+  h1{
+    font-size:30px;
+    color:aqua;
+    opacity:0.5;
+  }
+  .title{
+    font-size:50px;
+    font-family:'Courgette' ;
+    color:#fff;
+    font-weight:700;
+    margin-bottom:30px;
+    text-transform:uppercase;
+    text-align:center;
+    opacity:1;
+    
+    
+  }
+  
+  a{
+    color:green;
+    text-decoration:none;
+  }
+  .sing{
+    margin-top:0px;
+       margin-bottom:0px;
+       font-size:20px;
+       margin-left:40px;
+  }
+  button{
+    margin-top:10px;
+    display:flex;
+    margin-left:18px;
+    flex-direction:column;
+    padding:5px;
+    background-color:#191970;
+    width:90%;
+    align-items:center;
+    justify-content:center;
+    font-family: 'Courgette';
+    color:#fff;
+    font-size:20px;
   }
 }
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 400px){
   body{
-    background-color:#fff;
-    margin-top:40px;
-    overflow:hidden;
-  }
-  .regform{
-    background-color:#fff;
-    text-align:center;
-    width:300px;
-    margin:auto;
-    border-radius:15px 15px 0px 0px;
-    color:#191970;
-    margin-top:260px;
-    margin-bottom:100px;
-    font-size:30px;
+    box-sizing:border-box;
+    padding:0;
+    margin:0;
+    font-family:"Josefin Sans",Sans-serif;
+    overflow-x:hidden;
+    overflow-y:scroll;
   
+     
+  }
+  
+  .wrapper
+  {
+    background-image:url("https://images.unsplash.com/photo-1582133456304-2f5cb1c2afbb?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFuZCUyMGhvbGRpbmclMjBwaG9uZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+    max-width:250px;
+    width:100%;
+    height:70vh;
+    margin:auto;
+    opacity:0.8;
+    margin-top:0px;
+    padding:20px;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+  }
+  .wrap{
+    max-width:250px;
+    width:100%;
+    height:30vh;
+    margin:auto;
+    opacity:1.5;
+    margin-top:0px;
+    padding:20px;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+  }
+  
+  h1{
+    font-size:30px;
+    color:aqua;
+    opacity:0.5;
+  }
+  .title{
+    font-size:50px;
+    font-family:'Courgette' ;
+    color:#fff;
+    font-weight:700;
+    margin-bottom:30px;
+    text-transform:uppercase;
+    text-align:center;
+    opacity:1;
+    
+    
+  }
+  
+  a{
+    color:green;
+    text-decoration:none;
+  }
+  .sing{
+    margin-top:0px;
+       margin-bottom:0px;
+       font-size:20px;
+       margin-left:40px;
+  }
+  button{
+    margin-top:10px;
+    display:flex;
+    margin-left:18px;
+    flex-direction:column;
+    padding:5px;
+    background-color:#191970;
+    width:90%;
+    align-items:center;
+    justify-content:center;
+    font-family: 'Courgette';
+    color:#fff;
+    font-size:20px;
   }
 }
