--- a/src/index.css
+++ b/src/index.css
@@ -6,26 +6,35 @@ body{
   padding:0;
   margin:0;
   font-family:"Josefin Sans",Sans-serif;
-  overflow-x:hidden;
-  overflow-y:scroll;
+  overflow:hidden;
 }
 .wrapper
 {
-  max-width:700px;
+  max-width:500px;
   width:100%;
   height:100vh;
   margin:auto;
-  margin-top:10px;
+  margin-top:150px;
   padding:20px;
   background:#fff;
   box-shadow:1px 1px 2px rgba(0,0,0,0.125);
 }
 .title{
-  position:relative;
-  right:90px;
-  font-size:40px;
+  font-size:50px;
   font-family:'Courgette' ;
  
+  font-weight:700;
+  margin-bottom:40px;
+  color:#191970;
+  text-transform:uppercase;
+  text-align:center;
+  
+}
+
+.para{
+  font-size:25px;
+  font-family:'Courgette';
+  text-align:justify;
   font-weight:700;
   margin-bottom:15px;
   color:#191970;
@@ -33,296 +42,133 @@ body{
   text-align:center;
   
 }
-p{
-  position:relative;
-  padding:10px;
-  font-style:Courgette;
-  margin:5px;
-  margin-left:17px;
 
-}
-.kt{
-  text-align: justify;
-  padding-right:230px;
-  padding-left:30px;
-}
 button{
-  position:relative;
-  left:90px;
-  width:50%;
-  margin-top:20px;
+  margin-top:140px;
   display:flex;
   flex-direction:column;
   padding:10px;
   background-color:#191970;
+  width:100%;
   align-items:center;
   justify-content:center;
   font-family: 'Courgette';
   color:#fff;
   font-size:20px;
 }
-.button{
-  position:relative;
-  left:90px;
-  width:50%;
-  padding:10px;
-  margin-top:20px;
-  display:flex;
-  flex-direction:column;
-  background-color:#fff;
-  align-items:center;
-  justify-content:center;
-  font-family: 'Courgette';
-  color:black;
-  font-size:20px;
-  border:5px solid #191970;
-}
-.button2{
-  position:relative;
-  left:90px;
-  width:50%;
-  margin-top:20px;
-  display:flex;
-  flex-direction:column;
-  background-color:#191970;
- 
-  align-items:center;
-  justify-content:center;
-  font-family: 'Courgette';
-  color:#fff;
-  font-size:20px;
-  padding-left:20px;
-}
-.style{
-    margin-top:5px;
-}
-.icon{
-  display:flex;
-  margin:0px;
-}
-.save{
-  width:25px;
-  height:30px;
-  margin-top:10px;
-  padding-right:-5px;
-}
-@media only screen and (max-width: 700px){
-
+@media only screen and (max-width: 650px){
   body{
     box-sizing:border-box;
     padding:0;
     margin:0;
     font-family:"Josefin Sans",Sans-serif;
-    overflow-x:hidden;
-    overflow-y:scroll;
+    overflow:hidden;
   }
   .wrapper
   {
-    max-width:500px;
+    max-width:450px;
     width:100%;
     height:100vh;
     margin:auto;
-    margin-top:10px;
+    margin-top:150px;
     padding:20px;
     background:#fff;
     box-shadow:1px 1px 2px rgba(0,0,0,0.125);
   }
   .title{
-    position:relative;
-    right:30px;
-    font-size:40px;
+    font-size:50px;
     font-family:'Courgette' ;
    
-    font-weight:500;
+    font-weight:700;
+    margin-bottom:40px;
+    color:#191970;
+    text-transform:uppercase;
+    text-align:center;
+    
+  }
+  
+  .para{
+    font-size:25px;
+    font-family:'Courgette';
+    text-align:justify;
+    font-weight:700;
     margin-bottom:15px;
     color:#191970;
     text-transform:uppercase;
     text-align:center;
     
   }
-  p{
-    position:relative;
-    padding:5px;
-    font-style:Courgette;
-    margin:3px;
-    margin-left:10px;
   
-  }
-  .kt{
-    text-align: justify;
-    padding-right:100px;
-    padding-left:30px;
-  }
   button{
-    position:relative;
-    left:30px;
-    width:70%;
-    margin-top:20px;
+    margin-top:140px;
     display:flex;
     flex-direction:column;
-    padding:5px;
-    background-color:#191970;
-    align-items:center;
-    justify-content:center;
-    font-family: 'Courgette';
-    color:#fff;
-    font-size:20px;
-  }
-  .button{
-    position:relative;
-    left:30px;
-    width:70%;
     padding:10px;
-    margin-top:20px;
-    display:flex;
-    flex-direction:column;
-    background-color:#fff;
-    align-items:center;
-    justify-content:center;
-    font-family: 'Courgette';
-    color:black;
-    font-size:20px;
-    border:5px solid #191970;
-    padding:5px;
-  }
-  .button2{
-    position:relative;
-    left:30px;
-    width:70%;
-    margin-top:20px;
-    display:flex;
-    flex-direction:column;
     background-color:#191970;
-   padding:5;
+    width:80%;
     align-items:center;
     justify-content:center;
     font-family: 'Courgette';
     color:#fff;
     font-size:20px;
-    padding-left:20px;
+    margin-left:30px;
   }
-  .style{
-      margin-top:5px;
+}
+@media only screen and (max-width: 500px){
+  body{
+    box-sizing:border-box;
+    padding:0;
+    margin:0;
+    font-family:"Josefin Sans",Sans-serif;
+    overflow:hidden;
   }
-  .icon{
-    display:flex;
-    margin:0px;
-    margin-left:20px;
+  .wrapper
+  {
+    max-width:250px;
+    width:100%;
+    height:100vh;
+    margin:auto;
+    margin-top:150px;
+    padding:20px;
+    background:#fff;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.125);
   }
-  .save{
-    width:35px;
-    height:20px;
-    padding-left:10px;
-    padding-left:0px;
-  }
-  }
-  @media only screen and (max-width: 500px){
-
-    body{
-      box-sizing:border-box;
-      padding:0;
-      margin:0;
-      font-family:"Josefin Sans",Sans-serif;
-      overflow-x:hidden;
-      overflow-y:scroll;
-    }
-    .wrapper
-    {
-      max-width:350px;
-      width:100%;
-      height:100vh;
-      margin:auto;
-      margin-top:10px;
-      padding:20px;
-      background:#fff;
-      box-shadow:1px 1px 2px rgba(0,0,0,0.125);
-    }
-    .title{
-      position:relative;
-      right:20px;
-      font-size:40px;
-      font-family:'Courgette' ;
-     
-      font-weight:300;
-      margin-bottom:15px;
-      color:#191970;
-      text-transform:uppercase;
-      text-align:center;
-      
-    }
-    p{
-      position:relative;
-      padding:5px;
-      font-style:Courgette;
-      margin:3px;
-      margin-left:10px;
+  .title{
+    font-size:50px;
+    font-family:'Courgette' ;
+   
+    font-weight:700;
+    margin-bottom:40px;
+    color:#191970;
+    text-transform:uppercase;
+    text-align:center;
     
-    }
-    .kt{
-      text-align: justify;
-      padding-right:60px;
-      padding-left:20px;
-    }
-    button{
-      position:relative;
-      left:10px;
-      width:80%;
-      margin-top:20px;
-      display:flex;
-      flex-direction:column;
-      padding:5px;
-      background-color:#191970;
-      align-items:center;
-      justify-content:center;
-      font-family: 'Courgette';
-      color:#fff;
-      font-size:20px;
-    }
-    .button{
-      position:relative;
-      left:10px;
-      width:80%;
-      padding:5px;
-      margin-top:20px;
-      display:flex;
-      flex-direction:column;
-      background-color:#fff;
-      align-items:center;
-      justify-content:center;
-      font-family: 'Courgette';
-      color:black;
-      font-size:20px;
-      border:5px solid #191970;
-      padding:5px;
-    }
-    .button2{
-      position:relative;
-      left:10px;
-      width:80%;
-      margin-top:20px;
-      display:flex;
-      flex-direction:column;
-      background-color:#191970;
-     padding:5px;
-      align-items:center;
-      justify-content:center;
-      font-family: 'Courgette';
-      color:#fff;
-      font-size:20px;
-      padding-left:20px;
-    }
-    .style{
-        margin-top:5px;
-    }
-    .icon{
-      display:flex;
-      margin:0px;
-      margin-left:20px;
-    }
-    .save{
-      width:30px;
-      height:25px;
-      padding-left:10px;
-      padding-left:0px;
-    }
-    }
+  }
+  
+  .para{
+    font-size:25px;
+    font-family:'Courgette';
+    text-align:justify;
+    font-weight:700;
+    margin-bottom:15px;
+    color:#191970;
+    text-transform:uppercase;
+    text-align:center;
+    
+  }
+  
+  button{
+    margin-top:140px;
+    display:flex;
+    flex-direction:column;
+    padding:10px;
+    background-color:#191970;
+    width:100%;
+    align-items:center;
+    justify-content:center;
+    font-family: 'Courgette';
+    color:#fff;
+    font-size:20px;
+    margin-left:5px;
+  }
+}
