--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 body{
   box-sizing:border-box;
   padding:0;
@@ -12,7 +11,6 @@ body{
 {
   max-width:500px;
   width:100%;
-  height:100vh;
   margin:auto;
   margin-top:150px;
   padding:20px;
@@ -20,43 +18,29 @@ body{
   box-shadow:1px 1px 2px rgba(0,0,0,0.125);
 }
 .title{
-  font-size:50px;
-  font-family:'Courgette' ;
- 
+  font-size:40px;
+  font-family: 'Courgette';
   font-weight:700;
+  margin-bottom:25px;
+  color:#191970;
+  text-transform:uppercase;
+  text-align:center;
   margin-bottom:40px;
-  color:#191970;
-  text-transform:uppercase;
-  text-align:center;
-  
 }
-
-.para{
-  font-size:25px;
-  font-family:'Courgette';
-  text-align:justify;
-  font-weight:700;
-  margin-bottom:15px;
-  color:#191970;
-  text-transform:uppercase;
-  text-align:center;
-  
-}
-
 button{
-  margin-top:140px;
+  margin-top:20px;
   display:flex;
   flex-direction:column;
-  padding:10px;
+  padding:20px;
   background-color:#191970;
   width:100%;
   align-items:center;
   justify-content:center;
   font-family: 'Courgette';
   color:#fff;
-  font-size:20px;
+  font-size:30px;
 }
-@media only screen and (max-width: 650px){
+@media only screen and (max-width: 550px){
   body{
     box-sizing:border-box;
     padding:0;
@@ -66,9 +50,8 @@ button{
   }
   .wrapper
   {
-    max-width:450px;
+    max-width:400px;
     width:100%;
-    height:100vh;
     margin:auto;
     margin-top:150px;
     padding:20px;
@@ -76,45 +59,31 @@ button{
     box-shadow:1px 1px 2px rgba(0,0,0,0.125);
   }
   .title{
-    font-size:50px;
-    font-family:'Courgette' ;
-   
+    font-size:40px;
+    font-family: 'Courgette';
     font-weight:700;
+    margin-bottom:25px;
+    color:#191970;
+    text-transform:uppercase;
+    text-align:center;
     margin-bottom:40px;
-    color:#191970;
-    text-transform:uppercase;
-    text-align:center;
-    
   }
-  
-  .para{
-    font-size:25px;
-    font-family:'Courgette';
-    text-align:justify;
-    font-weight:700;
-    margin-bottom:15px;
-    color:#191970;
-    text-transform:uppercase;
-    text-align:center;
-    
-  }
-  
   button{
-    margin-top:140px;
+    margin-top:20px;
     display:flex;
     flex-direction:column;
-    padding:10px;
+    padding:15px;
     background-color:#191970;
-    width:80%;
+    width:85%;
     align-items:center;
     justify-content:center;
     font-family: 'Courgette';
     color:#fff;
-    font-size:20px;
+    font-size:30px;
     margin-left:30px;
-  }
+  } 
 }
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 400px){
   body{
     box-sizing:border-box;
     padding:0;
@@ -126,7 +95,6 @@ button{
   {
     max-width:250px;
     width:100%;
-    height:100vh;
     margin:auto;
     margin-top:150px;
     padding:20px;
@@ -134,41 +102,29 @@ button{
     box-shadow:1px 1px 2px rgba(0,0,0,0.125);
   }
   .title{
-    font-size:50px;
-    font-family:'Courgette' ;
-   
+    font-size:40px;
+    font-family: 'Courgette';
     font-weight:700;
+    margin-bottom:25px;
+    color:#191970;
+    text-transform:uppercase;
+    text-align:center;
     margin-bottom:40px;
-    color:#191970;
-    text-transform:uppercase;
-    text-align:center;
-    
   }
-  
-  .para{
-    font-size:25px;
-    font-family:'Courgette';
-    text-align:justify;
-    font-weight:700;
-    margin-bottom:15px;
-    color:#191970;
-    text-transform:uppercase;
-    text-align:center;
-    
-  }
-  
   button{
-    margin-top:140px;
+    margin-top:20px;
     display:flex;
     flex-direction:column;
-    padding:10px;
+    padding:15px;
     background-color:#191970;
-    width:100%;
+    width:95%;
     align-items:center;
     justify-content:center;
     font-family: 'Courgette';
     color:#fff;
-    font-size:20px;
-    margin-left:5px;
-  }
+    font-size:30px;
+    margin-left:30px;
+    padding-bottom:10px;
+    padding-top:10px;
+  } 
 }
