--- a/src/index.css
+++ b/src/index.css
@@ -1,87 +1,163 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 body{
   box-sizing:border-box;
   padding:0;
   margin:0;
   font-family:"Josefin Sans",Sans-serif;
-  overflow:hidden;
+  overflow-x:hidden;
+  overflow-y:scroll;
+
+   
 }
+
 .wrapper
 {
+  background-image:url("https://images.unsplash.com/photo-1582133456304-2f5cb1c2afbb?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFuZCUyMGhvbGRpbmclMjBwaG9uZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+  background-position:center;
+    background-size:cover;
   max-width:500px;
   width:100%;
+  height:70vh;
   margin:auto;
-  margin-top:150px;
+  opacity:0.8;
+  margin-top:0px;
   padding:20px;
-  background:#fff;
   box-shadow:1px 1px 2px rgba(0,0,0,0.125);
 }
+.wrap{
+  max-width:500px;
+  width:100%;
+  height:30vh;
+  margin:auto;
+  opacity:1.5;
+  margin-top:0px;
+  padding:20px;
+  box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+}
+
+h1{
+  font-size:30px;
+  color:aqua;
+  opacity:0.5;
+}
 .title{
-  font-size:40px;
-  font-family: 'Courgette';
+  font-size:50px;
+  font-family:'Courgette' ;
+  color:#fff;
   font-weight:700;
-  margin-bottom:25px;
-  color:#191970;
+  margin-bottom:30px;
   text-transform:uppercase;
   text-align:center;
-  margin-bottom:40px;
+  opacity:1;
+  
+  
+}
+
+a{
+  color:green;
+  text-decoration:none;
+}
+.sing{
+  margin-top:0px;
+     margin-bottom:0px;
+     font-size:20px;
+     margin-left:40px;
 }
 button{
-  margin-top:20px;
+  margin-top:10px;
   display:flex;
+  margin-left:18px;
   flex-direction:column;
-  padding:20px;
+  padding:5px;
   background-color:#191970;
-  width:100%;
+  width:90%;
   align-items:center;
   justify-content:center;
   font-family: 'Courgette';
   color:#fff;
-  font-size:30px;
+  font-size:20px;
 }
-@media only screen and (max-width: 550px){
+@media only screen and (max-width: 570px){
   body{
     box-sizing:border-box;
     padding:0;
     margin:0;
     font-family:"Josefin Sans",Sans-serif;
-    overflow:hidden;
+    overflow-x:hidden;
+    overflow-y:scroll;
+  
+     
   }
+  
   .wrapper
   {
-    max-width:400px;
+    background-image:url("https://images.unsplash.com/photo-1582133456304-2f5cb1c2afbb?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFuZCUyMGhvbGRpbmclMjBwaG9uZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+    background-position:center;
+    background-size:cover;
+    max-width:300px;
     width:100%;
+    height:70vh;
     margin:auto;
-    margin-top:150px;
+    opacity:0.8;
+    margin-top:0px;
     padding:20px;
-    background:#fff;
     box-shadow:1px 1px 2px rgba(0,0,0,0.125);
   }
+  .wrap{
+    max-width:300px;
+    width:100%;
+    height:30vh;
+    margin:auto;
+    opacity:1.5;
+    margin-top:0px;
+    padding:20px;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+  }
+  
+  h1{
+    font-size:30px;
+    color:aqua;
+    opacity:0.5;
+  }
   .title{
-    font-size:40px;
-    font-family: 'Courgette';
+    font-size:50px;
+    font-family:'Courgette' ;
+    color:#fff;
     font-weight:700;
-    margin-bottom:25px;
-    color:#191970;
+    margin-bottom:30px;
     text-transform:uppercase;
     text-align:center;
-    margin-bottom:40px;
+    opacity:1;
+    
+    
+  }
+  
+  a{
+    color:green;
+    text-decoration:none;
+  }
+  .sing{
+    margin-top:0px;
+       margin-bottom:0px;
+       font-size:20px;
+       margin-left:40px;
   }
   button{
-    margin-top:20px;
+    margin-top:10px;
     display:flex;
+    margin-left:18px;
     flex-direction:column;
-    padding:15px;
+    padding:5px;
     background-color:#191970;
-    width:85%;
+    width:90%;
     align-items:center;
     justify-content:center;
     font-family: 'Courgette';
     color:#fff;
-    font-size:30px;
-    margin-left:30px;
-  } 
+    font-size:20px;
+  }
 }
 @media only screen and (max-width: 400px){
   body{
@@ -89,42 +165,75 @@ button{
     padding:0;
     margin:0;
     font-family:"Josefin Sans",Sans-serif;
-    overflow:hidden;
+    overflow-x:hidden;
+    overflow-y:scroll;
+  
+     
   }
+  
   .wrapper
   {
+    background-image:url("https://images.unsplash.com/photo-1582133456304-2f5cb1c2afbb?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFuZCUyMGhvbGRpbmclMjBwaG9uZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
     max-width:250px;
     width:100%;
+    height:70vh;
     margin:auto;
-    margin-top:150px;
+    opacity:0.8;
+    margin-top:0px;
     padding:20px;
-    background:#fff;
     box-shadow:1px 1px 2px rgba(0,0,0,0.125);
   }
+  .wrap{
+    max-width:250px;
+    width:100%;
+    height:30vh;
+    margin:auto;
+    opacity:1.5;
+    margin-top:0px;
+    padding:20px;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.125);
+  }
+  
+  h1{
+    font-size:30px;
+    color:aqua;
+    opacity:0.5;
+  }
   .title{
-    font-size:40px;
-    font-family: 'Courgette';
+    font-size:50px;
+    font-family:'Courgette' ;
+    color:#fff;
     font-weight:700;
-    margin-bottom:25px;
-    color:#191970;
+    margin-bottom:30px;
     text-transform:uppercase;
     text-align:center;
-    margin-bottom:40px;
+    opacity:1;
+    
+    
+  }
+  
+  a{
+    color:green;
+    text-decoration:none;
+  }
+  .sing{
+    margin-top:0px;
+       margin-bottom:0px;
+       font-size:20px;
+       margin-left:40px;
   }
   button{
-    margin-top:20px;
+    margin-top:10px;
     display:flex;
+    margin-left:18px;
     flex-direction:column;
-    padding:15px;
+    padding:5px;
     background-color:#191970;
-    width:95%;
+    width:90%;
     align-items:center;
     justify-content:center;
     font-family: 'Courgette';
     color:#fff;
-    font-size:30px;
-    margin-left:30px;
-    padding-bottom:10px;
-    padding-top:10px;
-  } 
+    font-size:20px;
+  }
 }
